# travessera

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  GITHUB_PUSH_CHECKLIST.md  prompts.txt
docs/prompts/: prompts.txt
examples/: advanced_example.py  simple_example.py
examples/docker/: README.md  docker-compose.yml
examples/docker/client/: Dockerfile  client.py  requirements.txt
examples/docker/server/: Dockerfile  server.py
tests/: __init__.py  test_authentication.py  test_cleanup.py  test_core.py  test_endpoint_registry.py  test_exceptions.py  test_headers_manager.py  test_integration.py  test_models.py  test_parameter_parser.py  test_request_builder.py  test_response_handler.py  test_retry.py  test_serializers.py
travessera/: __init__.py  authentication.py  client.py  core.py  decorators.py  exceptions.py  models.py  retry.py  types.py
travessera/_internal/: config_resolver.py  endpoint_registry.py  headers_manager.py  parameter_parser.py  request_builder.py  response_handler.py
travessera/serializers/: __init__.py  base.py  json.py
